--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
                  top: 0;
                  position: sticky;
                  cursor: pointer;
-                 box-shadow: 0 7px 1.55rem 1px rgba(15, 62, 116, 0.962);
-                 border-bottom: 5.8px solid rgba(39, 83, 177, 0.954);
+                 box-shadow: 0 7.5px 1.2rem 1px rgba(10, 59, 115, 0.962);
+                 border-bottom: 6px solid rgba(36, 85, 154, 0.967);
           }
 
           .navbar:hover{
@@ -368,8 +368,8 @@
       justify-content: space-between;
       justify-items: center;
       width: 100%;
-      height: 1510px;
-      background: rgba(152, 152, 160, 0.292);
+      height: 1530px;
+      background: rgba(146, 146, 156, 0.247);
       color: rgba(109, 109, 109, 0.925);
       font-family: 'helvetica';
       font-weight: bold;
@@ -439,7 +439,7 @@
         flex-direction: column;
         width: 100%;
         height: auto;
-        background: rgba(152, 152, 160, 0.292);
+        background: rgba(146, 146, 156, 0.247);
     }
   
     .content1{
@@ -1912,17 +1912,17 @@ font-size: 19px;
           align-items: center;
           flex-direction: column;
           width: 88%; 
-          height: 750px;
-          color: #717171f0; 
-          font-family: 'arial';
-          font-size: 18px; 
+          height: 790px;
+          color: #6a6a6afc; 
+          font-family: 'helvetica';
+          font-size: 20px; 
           text-align: left; 
-          line-height: 22.5px;
-          padding: 3rem;
+          line-height: 22px;
+          padding: 1.6rem;
           cursor: pointer;
           background: #fff;  
           margin-top: 0.2rem;
-          border-left: 0.5rem solid #b00f47da;
+          border-left: 0.5rem solid #b00f47d6;
         }
 
         .LM{
