--- a/index.html
+++ b/index.html
@@ -179,18 +179,14 @@
                  justify-items: center;
                  background: #fff;
                  width: 100%;
-                 height: 96px;
+                 height: 94px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
                  cursor: pointer;
-                 box-shadow: 0 7.5px 1.2rem 1px rgba(10, 59, 115, 0.962);
-                 border-bottom: 6px solid rgba(36, 85, 154, 0.967);
-          }
-
-          .navbar:hover{
-            background: rgba(251, 252, 255, 0.992);
+                 box-shadow: 0 6px 0.6rem 1.25px rgba(10, 59, 115, 0.962);
+                 border-bottom: 6.5px solid rgba(20, 44, 140, 0.988);
           }
 
           .Joint-Point{
@@ -439,7 +435,7 @@
         flex-direction: column;
         width: 100%;
         height: auto;
-        background: rgba(152, 152, 160, 0.292);
+        background: rgba(111, 111, 123, 0.196);
     }
   
     .content1{
@@ -1647,6 +1643,7 @@ font-size: 19px;
           height: 650px;
           background: #fff;
           border: 0.12rem solid rgba(157, 157, 159, 0.614);
+          border-top: 0.5rem solid rgba(2, 150, 255, 0.965);
           margin-top: 3rem;
         }
 .VD3i{
@@ -1786,7 +1783,7 @@ font-size: 19px;
           justify-content: center;
           position: relative;
           width: 100%; 
-          height: 70px; 
+          height: 58px; 
           overflow: hidden;
           background: transparent;
           font-family: arial;
@@ -1922,7 +1919,8 @@ font-size: 19px;
           cursor: pointer;
           background: #fff;  
           margin-top: 0.2rem;
-          border-left: 0.5rem solid #b00f47d6;
+          border-left: 0.2rem solid #b00f47cd;
+          border-right: 0.2rem solid #b00f47cd;
         }
 
         .LM{
@@ -2179,8 +2177,8 @@ transition: 0.2s ease-in;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 58px;
-    height: 52px;
+    width: 59px;
+    height: 51.5px;
     border-radius: 50%;
     color: yellow;
     font-family: 'arial narrow';
