--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@ border: 0.14px solid rgba(172, 174, 183, 0.565);
             padding: 1.1rem;
             width: 85.96%;
             height: 286px;
-            background:transparent;
+            background: rgba(252, 215, 1, 0.991);
             margin-top: -1.5px;
             border-left: 1.25rem solid #fff;
             border-right: 1.25rem solid #fff;
@@ -705,7 +705,6 @@ border: 0.14px solid rgba(172, 174, 183, 0.565);
           .Kontent:hover{
             border: 0.12rem solid rgba(11, 11, 20, 0.848);
             transition: 0.4s ease-in-out;
-            background: rgba(255, 217, 0, 0.991);
             border-radius: 0.5rem;
           }
 
@@ -1928,18 +1927,19 @@ font-size: 19px;
           font-size: 18px;
           width: 100%; 
           height: auto; 
+          background: #e6e9f5f7;
           padding: 10px; 
-          border: 2px solid rgb(26, 136, 173); 
-          border-radius: 1rem;
+          border: 0.12rem solid rgba(7, 151, 254, 0.901); 
+          border-radius: 0.5rem;
         }
 
         .LM:hover{
           font-family: Arial;
-          font-size: 19px;
-          background: #9dcbe4;
-border: 0.17rem solid #141414f0;
-color: #252525d4;
-transition: 0.2s ease-in;
+          font-size: 18px;
+          background: #277ee0fa;
+border: 0.12rem solid #000;
+color: #fff;
+transition: 0.18s ease-in;
         }
 
 .footer1 img{
