--- a/index.html
+++ b/index.html
@@ -839,7 +839,7 @@ opacity: 0.97;
       width: 86.25%;
       height: 100px;
       background: #fff;
-      color: #0073fff5;
+      color: #0051ff;
       font-family: 'Poppins';
       font-size: 1.99rem;
       padding: 1.5rem;
@@ -853,10 +853,10 @@ opacity: 0.97;
 
           .navbar2:hover{
             background: #fff;
-            color: #858585;
+            color: #262626ed;
+            border: 0.15rem solid #4b4b4bce;
             border-radius: 0.7rem;
             transition: 0.17s ease-in;
-            border: 0.15rem solid #000;
           }
 
           .navbar3{
@@ -867,7 +867,7 @@ opacity: 0.97;
       width: 84.2%;
       height: 100px;
       background: #fff;
-      color: #0073fff5;
+      color: #0051ff;
       font-family: 'Poppins';
       font-size: 2rem;
       padding: 1.5rem;
@@ -881,11 +881,10 @@ opacity: 0.97;
 
           .navbar3:hover{
             background: #fff;
-            color: #858585;
+            color: #262626ed;
+            border: 0.15rem solid #4b4b4bce;
             border-radius: 0.7rem;
             transition: 0.17s ease-in;
-            border: 0.15rem solid #000;
-        
           }
 
           .content3{
@@ -897,7 +896,7 @@ opacity: 0.97;
             height: 435px;
             background: transparent; 
             padding: 16px;
-            color: #000;
+            color: #0073fff5;
             margin-top: 0.25rem;
             opacity: 0.97;
             
@@ -1194,7 +1193,7 @@ opacity: 0.97;
       width: 84.2%;
       height: 100px;
       background: #fff;
-      color: #0073fff5;
+      color: #0051ff;
       font-family: 'Poppins';
       font-size: 2rem;
       padding: 1.5rem;
@@ -1208,10 +1207,10 @@ opacity: 0.97;
 
 .navbar4:hover{
   background: #fff;
-            color: #858585;
+            color: #262626ed;
+            border: 0.15rem solid #4b4b4bce;
             border-radius: 0.7rem;
             transition: 0.17s ease-in;
-            border: 0.15rem solid #000;
 }
 
 .content4{
@@ -1446,7 +1445,7 @@ font-size: 20px;
       width: 84.2%;
       height: 100px;
       background: #fff;
-      color: #0073fff5;
+      color: #0051ff;
       font-family: 'Poppins';
       font-size: 2rem;
       padding: 1.5rem;
@@ -1460,10 +1459,10 @@ font-size: 20px;
 
           .navbar5:hover{
             background: #fff;
-            color: #616161;
+            color: #262626ed;
+            border: 0.15rem solid #4b4b4bce;
             border-radius: 0.7rem;
             transition: 0.17s ease-in;
-            border: 0.15rem solid #000;
           }
 
           .content5{ display: grid;
