--- a/index.html
+++ b/index.html
@@ -697,8 +697,8 @@ border: 0.14px solid rgba(172, 174, 183, 0.565);
             height: 286px;
             background: rgba(252, 215, 1, 0.991);
             margin-top: -1.85px;
-            border-left: 1.25rem solid #fff;
-            border-right: 1.25rem solid #fff;
+            border-left: 1.25rem solid #a90f45de;
+            border-right: 1.25rem solid #a90f45de;
            }
            
 
