--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                  top: 0;
                  position: sticky;
                  cursor: pointer;
-                 box-shadow: 0 5px 0.6rem 2px rgba(10, 59, 115, 0.962);
+                 box-shadow: 0 5px 0.55rem 2px rgba(10, 59, 115, 0.962);
                  border-bottom: 5px solid rgba(31, 57, 160, 0.961);
           }
 
@@ -365,7 +365,7 @@
       justify-items: center;
       width: 100%;
       height: 1530px;
-      background: rgba(109, 112, 117, 0.269);
+      background: rgba(90, 91, 98, 0.273);
       color: rgba(109, 109, 109, 0.925);
       font-family: 'helvetica';
       font-weight: bold;
@@ -435,7 +435,7 @@
         flex-direction: column;
         width: 100%;
         height: auto;
-        background: rgba(109, 112, 117, 0.269);
+        background: rgba(90, 91, 98, 0.273);
     }
   
     .content1{
@@ -704,7 +704,7 @@ border: 0.14px solid rgba(172, 174, 183, 0.565);
 
           .Kontent:hover{
             border: 0.12rem solid rgba(11, 11, 20, 0.848);
-            transition: 0.4s ease-in-out;
+            transition: 0.55s ease-in-out;
             border-radius: 0.5rem;
           }
 
@@ -1419,11 +1419,11 @@ font-size: 20px;
   box-shadow: 0 0 0.3rem 0.25px rgba(13, 13, 13, 0.7);
   border-radius: 0.1rem;
   font-family: 'helvetica';
-  font-size: 15.25px;
+  font-size: 15.2px;
   width: auto;
   height: 120px;
   padding: 10px;
-  line-height: 16.95px;
+  line-height: 16.9px;
   text-align: justify;
   cursor: pointer;
   margin-top: 9px;
@@ -1431,10 +1431,10 @@ font-size: 20px;
 }
 
 .HPT:hover{
-  color:#2e2e2ef5;
-  background: #f7f7f7;
+  color: #f5f5f5ef;
+  background: #3d3d3ded;
   transition: 0.2s ease-in;
-  padding: 4px;
+  padding: 5px;
 }
 
 .navbar5{
