--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
       justify-items: center;
       width: 100%;
       height: 1530px;
-      background: rgba(90, 91, 98, 0.273);
+      background: rgba(107, 108, 117, 0.254);
       color: rgba(109, 109, 109, 0.925);
       font-family: 'helvetica';
       font-weight: bold;
@@ -435,7 +435,7 @@
         flex-direction: column;
         width: 100%;
         height: auto;
-        background: rgba(90, 91, 98, 0.273);
+        background: rgba(107, 108, 117, 0.254);
     }
   
     .content1{
@@ -839,7 +839,7 @@ opacity: 0.97;
       width: 86.25%;
       height: 100px;
       background: #fff;
-      color: #0051ff;
+      color: #26388c;
       font-family: 'Poppins';
       font-size: 1.99rem;
       padding: 1.5rem;
@@ -867,7 +867,7 @@ opacity: 0.97;
       width: 84.2%;
       height: 100px;
       background: #fff;
-      color: #0051ff;
+      color: #26388c;
       font-family: 'Poppins';
       font-size: 2rem;
       padding: 1.5rem;
@@ -1193,7 +1193,7 @@ opacity: 0.97;
       width: 84.2%;
       height: 100px;
       background: #fff;
-      color: #0051ff;
+      color: #26388c;
       font-family: 'Poppins';
       font-size: 2rem;
       padding: 1.5rem;
@@ -1445,7 +1445,7 @@ font-size: 20px;
       width: 84.2%;
       height: 100px;
       background: #fff;
-      color: #0051ff;
+      color: #26388c;
       font-family: 'Poppins';
       font-size: 2rem;
       padding: 1.5rem;
