--- a/index.html
+++ b/index.html
@@ -2836,13 +2836,13 @@ transition: 0.18s ease-in;
                 <b style="font-size: 22px; color: rgb(37, 66, 195)">Etymology and Meaning</b>
                 <br>
                 <br>
-                Tiki N'Yiki is etymologically structured of two (2) words of Moore, a language in Burkina Faso</a> :
+                Tiki N'Yiki is etymologically structured with two (2) words of Moore language spoken in Burkina Faso</a> :
                 <br>
                 <br>
-              <b>1. Tiki</b> is litteraly meaning <b style="color: rgb(37, 66, 195); font-size: 16px;">Leaning upon</b>
+              <b>1. Tiki</b> is litteraly meaning: <b style="color: rgb(37, 66, 195); font-size: 16px;">Leaning upon</b>
                 <br>
                 <br>
-              <b> 2. N'Yiki</b> is meaning <b style="color: rgb(37, 66, 195); font-size: 16px;">Getting up</b>
+              <b> 2. N'Yiki</b> is meaning: <b style="color: rgb(37, 66, 195); font-size: 16px;">Getting up</b>
               </div>
 
               <a href="#">
