--- a/index.html
+++ b/index.html
@@ -179,14 +179,14 @@
                  justify-items: center;
                  background: #fff;
                  width: 100%;
-                 height: 94px;
+                 height: 93px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
                  cursor: pointer;
-                 box-shadow: 0 5px 0.55rem 2px rgba(10, 59, 115, 0.962);
-                 border-bottom: 5px solid rgba(31, 57, 160, 0.961);
+                 box-shadow: 0 5px 0.55rem 2px rgba(13, 72, 139, 0.962);
+                 border-bottom: 2px solid rgba(28, 56, 169, 0.982);
           }
 
           .Joint-Point{
@@ -1640,8 +1640,8 @@ font-size: 19px;
           height: 650px;
           background: #fff;
           border: 0.12rem solid rgba(157, 157, 159, 0.614);
-          border-top: 0.55rem solid rgba(30, 57, 162, 0.934);
-          margin-top: 3rem;
+          border-top: 0.42rem solid rgba(255, 68, 0, 0.87);
+          margin-top: 4rem;
         }
 .VD3i{
  display: grid;
@@ -1911,13 +1911,13 @@ font-size: 19px;
           font-family: 'helvetica';
           font-size: 20px; 
           text-align: left; 
-          line-height: 22px;
+          line-height: 21.75px;
           padding: 1.6rem;
           cursor: pointer;
           background: #fff;  
           margin-top: 0.2rem;
-          border-left: 0.2rem solid #b00f47cd;
-          border-right: 0.2rem solid #b00f47cd;
+          border-left: 0.1rem solid orangered;
+          border-right: 0.1rem solid orangered;
         }
 
         .LM{
@@ -2175,15 +2175,15 @@ transition: 0.18s ease-in;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 59px;
-    height: 51.5px;
+    width: 58px;
+    height: 53.9px;
     border-radius: 50%;
     color: yellow;
     font-family: 'arial narrow';
-    font-size: 12px;
+    font-size: 12.5px;
     padding: 2px;
-    background: #bd2157f0;
-    margin-top: -18.5px;
+    background: #bd1d55f0;
+    margin-top: -18px;
     margin-left: 0.33rem;
     cursor: pointer;
     border: 0.12rem solid rgba(11, 55, 95, 0.926);
