--- a/index.html
+++ b/index.html
@@ -179,14 +179,14 @@
                  justify-items: center;
                  background: #fff;
                  width: 100%;
-                 height: 93px;
+                 height: 97px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
                  cursor: pointer;
-                 box-shadow: 0 5px 0.55rem 2px rgba(13, 72, 139, 0.962);
-                 border-bottom: 2px solid rgba(28, 56, 169, 0.982);
+                 box-shadow: 0 5.35px 0.54rem 1.2px rgba(13, 72, 139, 0.962);
+                 border-bottom: 5px solid rgb(5, 213, 255);
           }
 
           .Joint-Point{
@@ -2176,13 +2176,13 @@ transition: 0.18s ease-in;
     justify-content: center;
     align-items: center;
     width: 58px;
-    height: 53.9px;
+    height: 53.6px;
     border-radius: 50%;
     color: yellow;
     font-family: 'arial narrow';
     font-size: 12.5px;
     padding: 2px;
-    background: #bd1d55f0;
+    background: #c21e58eb;
     margin-top: -18px;
     margin-left: 0.33rem;
     cursor: pointer;
