--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                  position: sticky;
                  cursor: pointer;
                  box-shadow: 0 5px 0.5rem 1.5px rgba(12, 65, 125, 0.962);
-                 border-bottom: 4.25px solid rgb(0, 213, 255);
+                 border-bottom: 4.25px solid rgba(0, 225, 255, 0.946);
           }
 
           .Joint-Point{
