--- a/index.html
+++ b/index.html
@@ -1640,7 +1640,7 @@ font-size: 19px;
           height: 650px;
           background: #fff;
           border: 0.12rem solid rgba(157, 157, 159, 0.614);
-          border-top: 0.42rem solid rgba(255, 68, 0, 0.87);
+          border-top: 0.42rem solid rgba(255, 70, 2, 0.968);
           margin-top: 4rem;
         }
 .VD3i{
@@ -2180,13 +2180,13 @@ transition: 0.18s ease-in;
     border-radius: 50%;
     color: yellow;
     font-family: 'arial narrow';
-    font-size: 12.5px;
+    font-size: 12.55px;
     padding: 2px;
-    background: #c21e58eb;
+    background: rgba(249, 71, 0, 0.99);
     margin-top: -18px;
     margin-left: 0.33rem;
     cursor: pointer;
-    border: 0.12rem solid rgba(11, 55, 95, 0.926);
+    border: 0.12rem solid rgba(12, 52, 90, 0.698);
     
    }
 
