--- a/index.html
+++ b/index.html
@@ -185,8 +185,8 @@
                  top: 0;
                  position: sticky;
                  cursor: pointer;
-                 box-shadow: 0 6.5px 0.5rem 1.5px rgba(18, 67, 123, 0.958);
-                 border-bottom: 4.85px solid rgba(2, 255, 255, 0.984);
+                 box-shadow: 0 6.5px 0.52rem 1.5px rgba(21, 70, 127, 0.914);
+                 border-bottom: 4.85px solid rgb(2, 255, 251);
           }
 
           .Joint-Point{
@@ -2183,7 +2183,7 @@ transition: 0.18s ease-in;
     font-size: 12.55px;
     padding: 2px;
     background: rgba(249, 71, 0, 0.99);
-    margin-top: -18px;
+    margin-top: -17px;
     margin-left: 0.33rem;
     cursor: pointer;
     border: 0.12rem solid rgba(12, 52, 90, 0.698);
