--- a/index.html
+++ b/index.html
@@ -184,9 +184,8 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 cursor: pointer;
-                 box-shadow: 0 6.5px 0.52rem 1.5px rgba(21, 70, 127, 0.914);
-                 border-bottom: 4.85px solid rgb(2, 255, 251);
+                 box-shadow: 0 6.5px 0.5rem 1.5px rgba(18, 67, 123, 0.958);
+                 border-bottom: 4.85px solid rgba(2, 255, 255, 0.984);
           }
 
           .Joint-Point{
