--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 6.2px 0.5rem 1.5px rgba(15, 59, 109, 0.958);
-                 border-bottom: 4.9px solid rgba(2, 247, 255, 0.984);
+                 box-shadow: 0 6.2px 0.5rem 1.5px rgba(18, 68, 124, 0.958);
+                 border-bottom: 4.5px solid rgb(2, 247, 255);
           }
 
           .Joint-Point{
