--- a/index.html
+++ b/index.html
@@ -179,13 +179,13 @@
                  justify-items: center;
                  background: #fff;
                  width: 100%;
-                 height: 95px;
+                 height: 96px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 6.2px 0.5rem 1.5px rgba(18, 68, 124, 0.958);
-                 border-bottom: 4.5px solid rgb(2, 247, 255);
+                 box-shadow: 0 7px 0.5rem 1.6px rgba(14, 55, 102, 0.958);
+                 border-bottom: 5px solid rgba(2, 247, 255, 0.784);
           }
 
           .Joint-Point{
@@ -2181,11 +2181,11 @@ transition: 0.18s ease-in;
     font-family: 'arial narrow';
     font-size: 12.55px;
     padding: 2px;
-    background: rgba(249, 71, 0, 0.99);
-    margin-top: -17px;
+    background: rgb(249, 65, 3);
+    margin-top: -17.8px;
     margin-left: 0.33rem;
     cursor: pointer;
-    border: 0.12rem solid rgba(12, 52, 90, 0.698);
+    border: 0.12rem solid rgba(14, 58, 99, 0.698);
     
    }
 
