--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 7px 0.5rem 1.6px rgba(14, 54, 100, 0.967);
-                 border-bottom: 5px solid rgba(4, 238, 255, 0.959);
+                 box-shadow: 0 7.5px 0.5rem 1.6px rgba(16, 57, 104, 0.967);
+                 border-bottom: 5px solid rgb(4, 230, 255);
           }
 
           .Joint-Point{
@@ -2902,19 +2902,19 @@ transition: 0.18s ease-in;
               <div class="DiapoPhoto">
                 <div class="T">
                 <div class="BoderTopColor1" style="opacity: 0.97; border: 0.14px solid rgba(172, 174, 183, 0.565); color: #2b2b2bbb;
-                background: rgba(172, 174, 183, 0.24); padding: 6px; font-family: 'helvetica'; font-size: 18px">Celebrating Christmas at Tiki N'Yiki's headquarter [Burkina Faso]</div>
+                background: rgba(38, 38, 38, 0.928); padding: 6px; font-family: 'helvetica'; font-size: 18px">Celebrating Christmas at Tiki N'Yiki's headquarter [Burkina Faso]</div>
                 <div><img src="https://www.zupimages.net/up/22/31/z42x.jpg" alt="Christmas at Tiki N'Yiki"></div>
               </div>
 
               <div class="T1">
                 <div class="BoderTopColor1" style="opacity: 0.97; border: 0.14px solid rgba(172, 174, 183, 0.565); color: #2b2b2bbb;
-                background: rgba(172, 174, 183, 0.24); padding: 6px; font-family: 'helvetica'; font-size: 18px">Classes in Ziniare [Burkina Faso]</div>
+                background: rgba(38, 38, 38, 0.928); padding: 6px; font-family: 'helvetica'; font-size: 18px">Classes in Ziniare [Burkina Faso]</div>
                 <div><img src="https://www.zupimages.net/up/22/21/3bad.jpg" alt="Classes"> </div>
               </div>
 
               <div class="T2">
                 <div class="BoderTopColor1" style="opacity: 0.97; border: 0.14px solid rgba(172, 174, 183, 0.565); color: #2b2b2bbb;
-                background: rgba(172, 174, 183, 0.24); padding: 6px; font-family: 'helvetica'; font-size: 18px">Teaching Has Always Been Funny To Me. I Learned A Lot Back</div>
+                background: rgba(38, 38, 38, 0.928); padding: 6px; font-family: 'helvetica'; font-size: 18px">Teaching Has Always Been Funny To Me. I Learned A Lot Back</div>
                 <div><img src="https://www.zupimages.net/up/22/31/ttk3.jpg" alt="Teaching in BF"></div>
               </div>
 
@@ -3027,7 +3027,7 @@ transition: 0.18s ease-in;
             </div>
 
             <div class="navbar5">
-              Food Safety Is Still A Concern In Some Regions Around The World. 
+              Food Safety Is Still A Concern In Many Regions Around The World. 
             </div>
 
             <div class="content5">
