--- a/index.html
+++ b/index.html
@@ -2701,7 +2701,7 @@ transition: 0.18s ease-in;
               <div class="ViiDe">
 
                 <h1 style="font-size: 2rem; text-align: left; color: #0a93fce9;">What it means to live with a disability ?</h1>
-            <p>Living as a disabled person is tough, perpetually challenging and also life-changing. Over to experience some bit of consideration by the ones and a lot of discriminations by the others, living with a disabilty can be learning and teaching in some ways. 
+            <p>Living as a disabled person is tough, perpetually challenging and also life-changing. Over to experience few consideration and a lot of discriminations socially, living with a disabilty can be learning and teaching in some ways. 
               <br> 
               <br>
               In terms of how disabled people are courageous and determinated to make a way for their lives despite disability, is inspiring, energy-fueling , hope-making and game-changing for some people in the communities who are disapointed because of some reasons. 
