--- a/index.html
+++ b/index.html
@@ -2704,7 +2704,7 @@ transition: 0.18s ease-in;
             <p>Living as a disabled person is very tough and perpetually challenging. Over to experience few consideration and a lot of discriminations socially, living with a disabilty can be learning and also teaching in some ways. 
               <br> 
               <br>
-              In terms of how disabled people are courageous and determinated to make a way for their lives despite disability, is inspiring, energy-fueling , hope-making and game-changing for some people in the communities who are disapointed because of some reasons. 
+              In terms of how disabled people are courageous and determinated to make a way for their lives despite disability, is inspiring, energy-fueling, hope-making and may be game-changing for some people in the communities for some reasons. 
               <br>
               <br>
               Disabled people are unintentionally often considered to be as social barometers through whom we can measure the bahavior and the degree of respect they are getting given the society is plenty of many bareers. So through conversations and social interactions with the so-called "normal people", disabled people are sometimes able to identify who is too inclusive-minded, less inclusive-minded or not.
