--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 7px 0.5rem 1.8px rgba(17, 56, 101, 0.967);
-                 border-bottom: 5px solid rgb(4, 251, 255);
+                 box-shadow: 0 8px 0.5rem 1.8px rgba(16, 56, 105, 0.976);
+                 border-bottom: 5px solid rgb(4, 247, 255);
           }
 
           .Joint-Point{
@@ -1906,11 +1906,11 @@ font-size: 19px;
           flex-direction: column;
           width: 88%; 
           height: 790px;
-          color: #6a6a6afc; 
+          color: #616161f9; 
           font-family: 'helvetica';
           font-size: 20px; 
           text-align: left; 
-          line-height: 21px;
+          line-height: 20.5px;
           padding: 1.6rem;
           cursor: pointer;
           background: #fff;  
@@ -2701,27 +2701,27 @@ transition: 0.18s ease-in;
               <div class="ViiDe">
 
                 <h1 style="font-size: 2rem; text-align: left; color: #0a93fce9;">What it means to live with a disability ?</h1>
-            <p>Living as a disabled person is very tough and perpetually challenging. Over to experience few consideration and a lot of discriminations socially, living with a disabilty can be learning and also teaching in some ways. 
+            <p>Living as a disabled person is very tough and perpetually challenging. Over to socially experience few consideration but a lot of discriminations, living with a disabilty can be learning and also teaching in some ways. 
               <br> 
               <br>
-              In terms of how disabled people are courageous and determinated to make a way for their lives despite disability, is inspiring, energy-fueling, hope-making and may be game-changing for some people in the communities for some reasons. 
+              In terms of how disabled people are courageous and determinated to make their lives despite disability and stigmatisation, is very inspiring, energy-fueling, hope-making and may be game-changing for some people in the communities for some reasons. 
               <br>
               <br>
-              Disabled people are unintentionally often considered to be as social barometers through whom we can measure the bahavior and the degree of respect they are getting given the society is plenty of many bareers. So through conversations and social interactions with the so-called "normal people", disabled people are sometimes able to identify who is too inclusive-minded, less inclusive-minded or not.
+              Disabled people are often unintentionally considered to be like social barometers through whom it can be measured the level of inclusiveness and considerattion. Through conversations and social interactions with the so-called "normal people", they are sometimes able to tell who is very, less or not inclusive-minded.
               <br>
               <br>
-               As human-beings we should advocate for more inclusion, solidarity, compassion, mutual respect, sharing spirit among others in order to build a society which foundation is done by harmony and cohesion. 
+               As human-beings we are not definitely immunized from becoming disabled. So we should more advocate for inclusion, solidarity, complementarity, compassion among other human values and qualities in order to build an inclusive society on harmony and cohesion. 
                
                <br>
                <br>
-               Basically living as a disabled is to dealing with many issues than can vary from person to person and from a region to another.
+               Basically living as a disabled is to deal with many issues than can vary from person to person and from a region to another.
                Wherever disabled people are living and whatever is their social satus, will be impacting their lifetime experiences. 
                <br>
                <br>
-               But it's not unknown that the harsh and silent climate of discriminations towards disabled people, is undermining their rights. They have always to live with unfairness. It shouldn't. 
+               It's not unknown the existence of a harsh and difficult climate of discriminations towards disabled people. That is deeply undermining their rights and they are sometimes living in unfairness dicted by the community. It shouldn't. 
                <br>
                <br>
-               That's why Tiki N'Yiki is focused to improve Education and Protect Rights of disabled people generally but especially disabled children.
+               That's why Tiki N'Yiki is focused to improve Education and Protect Rights of disabled people especially disabled children in Burkina Faso.
 
               </p>
         
