--- a/index.html
+++ b/index.html
@@ -2901,20 +2901,20 @@ transition: 0.18s ease-in;
 
               <div class="DiapoPhoto">
                 <div class="T">
-                <div class="BoderTopColor1" style="opacity: 0.97; border: 0.14px solid rgba(172, 174, 183, 0.565); color: #2b2b2bbb;
-                background: rgba(38, 38, 38, 0.928); padding: 6px; font-family: 'helvetica'; font-size: 18px">Celebrating Christmas at Tiki N'Yiki's headquarter [Burkina Faso]</div>
+                <div class="BoderTopColor1" style="opacity: 0.97; border: 0.1px solid rgba(190, 192, 201, 0.625); color: #2b2b2bbb;
+                background: #fff; padding: 6px; font-family: 'helvetica'; font-size: 18px">Celebrating Christmas at Tiki N'Yiki's headquarter [Burkina Faso]</div>
                 <div><img src="https://www.zupimages.net/up/22/31/z42x.jpg" alt="Christmas at Tiki N'Yiki"></div>
               </div>
 
               <div class="T1">
-                <div class="BoderTopColor1" style="opacity: 0.97; border: 0.14px solid rgba(172, 174, 183, 0.565); color: #2b2b2bbb;
-                background: rgba(38, 38, 38, 0.928); padding: 6px; font-family: 'helvetica'; font-size: 18px">Classes in Ziniare [Burkina Faso]</div>
+                <div class="BoderTopColor1" style="opacity: 0.97; border: 0.1px solid rgba(190, 192, 201, 0.625); color: #2b2b2bbb;
+                background: #fff; padding: 6px; font-family: 'helvetica'; font-size: 18px">Classes in Ziniare [Burkina Faso]</div>
                 <div><img src="https://www.zupimages.net/up/22/21/3bad.jpg" alt="Classes"> </div>
               </div>
 
               <div class="T2">
-                <div class="BoderTopColor1" style="opacity: 0.97; border: 0.14px solid rgba(172, 174, 183, 0.565); color: #2b2b2bbb;
-                background: rgba(38, 38, 38, 0.928); padding: 6px; font-family: 'helvetica'; font-size: 18px">Teaching Has Always Been Funny To Me. I Learned A Lot Back</div>
+                <div class="BoderTopColor1" style="opacity: 0.97; border: 0.14px solid rgba(190, 192, 201, 0.625); color: #2b2b2bbb;
+                background: #fff; padding: 6px; font-family: 'helvetica'; font-size: 18px">Teaching Kid Has Always Been Funny To Me. I Learned Back From Them</div>
                 <div><img src="https://www.zupimages.net/up/22/31/ttk3.jpg" alt="Teaching in BF"></div>
               </div>
 
