--- a/index.html
+++ b/index.html
@@ -1663,9 +1663,9 @@ font-size: 19px;
   width: 80%;
   height: 415px;
   overflow: hidden;
-  border: 0.25rem solid #3b3b3bdd;
+  border: 0.1rem solid #000;
   padding: 15px;
-  border-radius: 0.25rem;
+  border-radius: 0.15rem;
 }
 
 .VDI{
@@ -1785,8 +1785,7 @@ font-size: 19px;
           font-family: arial;
           font-size: 20px;
           color: #4f5156c5;
-          margin-top: 1rem;
-          border-bottom: 0.5rem solid #048eff;
+          margin-top: 0.75rem;
         }
 
         .VDA{
@@ -1915,8 +1914,9 @@ font-size: 19px;
           cursor: pointer;
           background: #fff;  
           margin-top: 0.2rem;
-          border-left: 0.1rem solid orangered;
-          border-right: 0.1rem solid orangered;
+          border-top: 0.5rem solid #0a93fce9;
+          border-left: 0.25rem solid orangered;
+          border-right: 0.25rem solid orangered;
         }
 
         .LM{
