--- a/index.html
+++ b/index.html
@@ -179,13 +179,13 @@
                  justify-items: center;
                  background: #fff;
                  width: 100%;
-                 height: 96px;
+                 height: 98px;
                  object-fit: cover;
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 8px 0.5rem 1.8px rgba(16, 56, 105, 0.976);
-                 border-bottom: 5px solid rgb(4, 247, 255);
+                 box-shadow: 0 8px 0.5rem 1.8px rgba(15, 52, 97, 0.976);
+                 border-bottom: 5px solid gold;
           }
 
           .Joint-Point{
@@ -2174,18 +2174,18 @@ transition: 0.18s ease-in;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 58px;
-    height: 53.6px;
+    width: 59px;
+    height: 53px;
     border-radius: 50%;
     color: yellow;
     font-family: 'arial narrow';
-    font-size: 12.55px;
+    font-size: 13px;
     padding: 2px;
-    background: rgb(249, 65, 3);
-    margin-top: -17.8px;
+    background: rgb(252, 63, 0);
+    margin-top: -17px;
     margin-left: 4rem;
     cursor: pointer;
-    border: 0.12rem solid rgba(14, 58, 99, 0.698);
+    border: 0.12rem solid rgba(23, 92, 156, 0.7);
     
    }
 
