--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 7.5px 0.48rem 1.65px rgba(15, 52, 97, 0.976);
+                 box-shadow: 0 7.7px 0.48rem 1.65px rgba(14, 50, 93, 0.976);
                  border-bottom: 5px solid gold;
           }
 
@@ -1783,8 +1783,8 @@ font-size: 19px;
           overflow: hidden;
           background: transparent;
           font-family: arial;
-          font-size: 20px;
-          color: #4f5156c5;
+          font-size: 18px;
+          color: #4b4d51df;
           margin-top: 0.75rem;
         }
 
@@ -1905,11 +1905,11 @@ font-size: 19px;
           flex-direction: column;
           width: 88%; 
           height: 790px;
-          color: #616161f9; 
-          font-family: 'helvetica';
-          font-size: 20px; 
+          color: #6f6f6ff2; 
+          font-family: 'arial';
+          font-size: 20.5px; 
           text-align: left; 
-          line-height: 20.5px;
+          line-height: 20.75px;
           padding: 1.6rem;
           cursor: pointer;
           background: #fff;  
@@ -2710,7 +2710,7 @@ transition: 0.18s ease-in;
               Disabled people are often unintentionally considered to be like social barometers through whom it can be measured the level of inclusiveness and considerattion. Through conversations and social interactions with the so-called "normal people", they are sometimes able to tell who is very, less or not inclusive-minded.
               <br>
               <br>
-               As human-beings we are not definitely immunized from becoming disabled. So we should more advocate for inclusion, solidarity, complementarity, compassion among other human values and qualities in order to build an inclusive society on harmony and cohesion. 
+               As human-beings nobody is definitely immunized from becoming disabled. We should more advocate for inclusion, solidarity, complementarity, compassion among other human values and qualities in order to build an inclusive society based on harmony and cohesion. 
                
                <br>
                <br>
@@ -2901,20 +2901,20 @@ transition: 0.18s ease-in;
 
               <div class="DiapoPhoto">
                 <div class="T">
-                <div class="BoderTopColor1" style="opacity: 0.97; border: 0.1px solid rgba(190, 192, 201, 0.625); color: #2b2b2bbb;
-                background: #fff; padding: 6px; font-family: 'helvetica'; font-size: 18px">Celebrating Christmas at Tiki N'Yiki's headquarter [Burkina Faso]</div>
+                <div class="BoderTopColor1" style="opacity: 0.97; border: 0.1px solid rgba(190, 192, 201, 0.625); color: #181818c2;
+                background: #fff; padding: 6px; font-family: 'helvetica'; font-size: 18px">Celebrating Christmas at Tiki N'Yiki's Headquarter in Ziniare [Burkina Faso]</div>
                 <div><img src="https://www.zupimages.net/up/22/31/z42x.jpg" alt="Christmas at Tiki N'Yiki"></div>
               </div>
 
               <div class="T1">
-                <div class="BoderTopColor1" style="opacity: 0.97; border: 0.1px solid rgba(190, 192, 201, 0.625); color: #2b2b2bbb;
-                background: #fff; padding: 6px; font-family: 'helvetica'; font-size: 18px">Classes in Ziniare [Burkina Faso]</div>
+                <div class="BoderTopColor1" style="opacity: 0.97; border: 0.1px solid rgba(190, 192, 201, 0.625); color: #181818c2;
+                background: #fff; padding: 6px; font-family: 'helvetica'; font-size: 18px">How To Teach The Alphabet In A Classroom With Children? [Burkina Faso]</div>
                 <div><img src="https://www.zupimages.net/up/22/21/3bad.jpg" alt="Classes"> </div>
               </div>
 
               <div class="T2">
-                <div class="BoderTopColor1" style="opacity: 0.97; border: 0.14px solid rgba(190, 192, 201, 0.625); color: #2b2b2bbb;
-                background: #fff; padding: 6px; font-family: 'helvetica'; font-size: 18px">Teaching Kid Has Always Been Funny To Me. I Learned Back From Them</div>
+                <div class="BoderTopColor1" style="opacity: 0.97; border: 0.14px solid rgba(190, 192, 201, 0.625); color: #181818c2;
+                background: #fff; padding: 6px; font-family: 'helvetica'; font-size: 18px">Teaching Children Has Been Funny To Me. I Learned Back From Them</div>
                 <div><img src="https://www.zupimages.net/up/22/31/ttk3.jpg" alt="Teaching in BF"></div>
               </div>
 
