--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
                  z-index: 1;
                  top: 0;
                  position: sticky;
-                 box-shadow: 0 7.7px 0.48rem 1.65px rgba(14, 50, 93, 0.976);
-                 border-bottom: 5px solid gold;
+                 box-shadow: 0 7.9px 0.5rem 1.65px rgba(15, 49, 90, 0.976);
+                 border-bottom: 6px solid gold;
           }
 
           .Joint-Point{
@@ -1905,7 +1905,7 @@ font-size: 19px;
           flex-direction: column;
           width: 88%; 
           height: 790px;
-          color: #6f6f6ff2; 
+          color: #6d6d6df2; 
           font-family: 'arial';
           font-size: 20.5px; 
           text-align: left; 
@@ -1914,9 +1914,9 @@ font-size: 19px;
           cursor: pointer;
           background: #fff;  
           margin-top: 0.2rem;
-          border-top: 0.5rem solid #0a93fce9;
-          border-left: 0.25rem solid orangered;
-          border-right: 0.25rem solid orangered;
+          border-top: 0.4rem solid #0492ffe1;
+          border-left: 0.3rem solid rgba(255, 68, 0, 0.987);
+          border-right: 0.3rem solid rgba(255, 68, 0, 0.987);
         }
 
         .LM{
@@ -2700,8 +2700,8 @@ transition: 0.18s ease-in;
 
               <div class="ViiDe">
 
-                <h1 style="font-size: 2rem; text-align: left; color: #0a93fce9;">What it means to live with a disability ?</h1>
-            <p>Living as a disabled person is very tough and perpetually challenging. Over to socially experience few consideration but a lot of discriminations, living with a disabilty can be learning and also teaching in some ways. 
+                <h1 style="font-size: 2rem; text-align: left; color: #0290fdea;">What it means to live with a disability ?</h1>
+            <p>Living as a disabled person is very tough and perpetually challenging. Over to socially experience few consideration and a lot of discriminations, living with a disabilty is like to learning and also teaching gathered various chapters of life about disability in some ways. 
               <br> 
               <br>
               In terms of how disabled people are courageous and determinated to make their lives despite disability and stigmatisation, is very inspiring, energy-fueling, hope-making and may be game-changing for some people in the communities for some reasons. 
