--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
             cursor: pointer;
             margin-left: 2rem;
             margin-top: -2rem;
-            border: 0.12rem solid rgba(157, 157, 159, 0.614);
+            border: 0.12rem solid rgba(106, 107, 115, 0.41);
           }
 
           .T-Area:hover{
@@ -584,7 +584,7 @@
             background: #fff;
             cursor: pointer;
             opacity: 0.97;
-            border: 0.12rem solid rgba(157, 157, 159, 0.614);
+            border: 0.12rem solid rgba(106, 107, 115, 0.41);
   
           }
           .Pic:hover{
@@ -645,7 +645,7 @@ border: 0.14px solid rgba(172, 174, 183, 0.565);
             background: #fff; 
             border-radius: 0.15rem;
             margin-top: -27px;
-            border: 0.12rem solid rgba(157, 157, 159, 0.614);
+            border: 0.12rem solid rgba(106, 107, 115, 0.41);
           }
 
           .KontenT:hover{
@@ -844,7 +844,7 @@ opacity: 0.97;
       padding: 1.5rem;
       font-weight: bold;
       border-radius: 0.15rem;
-      border: 0.12rem solid rgba(157, 157, 159, 0.614);
+      border: 0.12rem solid rgba(106, 107, 115, 0.41);
       cursor: pointer;
       margin-top: 1px;
       opacity: 0.97;
@@ -871,7 +871,7 @@ opacity: 0.97;
       font-size: 2rem;
       padding: 1.5rem;
       font-weight: bold;
-      border: 0.12rem solid rgba(157, 157, 159, 0.614);
+      border: 0.12rem solid rgba(106, 107, 115, 0.41);
       border-radius: 0.15rem;
       cursor: pointer;
       margin-top: 0.3rem;
@@ -914,7 +914,7 @@ opacity: 0.97;
             background: #fff;
             margin-top: -2px;
             border-radius: 0.15rem;
-            border: 0.12rem solid rgba(157, 157, 159, 0.614);
+            border: 0.12rem solid rgba(106, 107, 115, 0.41);
             
           }
 
@@ -1197,7 +1197,7 @@ opacity: 0.97;
       font-size: 2rem;
       padding: 1.5rem;
       font-weight: bold;
-      border: 0.12rem solid rgba(157, 157, 159, 0.614);
+      border: 0.12rem solid rgba(106, 107, 115, 0.41);
       border-radius: 0.15rem;
       cursor: pointer;
       margin-top: 1.45rem;
@@ -1235,7 +1235,7 @@ opacity: 0.97;
             padding: 10px;
             margin-top: -8px;
             border-radius: 0.15rem;
-            border: 0.12rem solid rgba(157, 157, 159, 0.614);
+            border: 0.12rem solid rgba(106, 107, 115, 0.41);
           }
           .H-P:hover{
             border: 0.15rem solid #000;
@@ -1318,7 +1318,7 @@ font-size: 14px;
   height: 514px;
   padding: 25px;
   background: #fff;
-  border: 0.12rem solid rgba(157, 157, 159, 0.614);
+  border: 0.12rem solid rgba(106, 107, 115, 0.41);
   border-radius: 0.15rem;
   cursor: pointer;
   margin-top: 4.15rem;
@@ -1452,7 +1452,7 @@ font-size: 20px;
       cursor: pointer;
       margin-top: 1rem;
       opacity: 0.97;
-      border: 0.12rem solid rgba(157, 157, 159, 0.614);
+      border: 0.12rem solid rgba(106, 107, 115, 0.41);
     
           }
 
@@ -1486,7 +1486,7 @@ font-size: 20px;
             background: #fff;
             border-radius: 0.15rem;
             margin-top: -5.5px;
-            border: 0.12rem solid rgba(157, 157, 159, 0.614);
+            border: 0.12rem solid rgba(106, 107, 115, 0.41);
           }
 .FoodSecurity:hover{
   border: 1px solid #000;
@@ -1639,7 +1639,8 @@ font-size: 19px;
           height: 650px;
           background: #fff;
           border: 0.12rem solid rgba(157, 157, 159, 0.614);
-          border-top: 0.42rem solid rgba(255, 70, 2, 0.968);
+          border-radius: 0.5rem;
+          border-top: 0.4rem solid rgba(255, 70, 2, 0.968);
           margin-top: 4rem;
         }
 .VD3i{
@@ -1894,7 +1895,7 @@ font-size: 19px;
           padding: 1rem;
           cursor: pointer;
           background: #fff;  
-          border: 0.12rem solid rgba(157, 157, 159, 0.614);
+          border: 0.12rem solid rgba(106, 107, 115, 0.41);
           margin-top: 0.5rem;
         }
 
@@ -1914,6 +1915,9 @@ font-size: 19px;
           cursor: pointer;
           background: #fff;  
           margin-top: 0.2rem;
+          border: 0.12rem solid rgba(106, 107, 115, 0.41);
+          border-top-left-radius: 0.5rem;
+          border-top-right-radius: 0.5rem;
           border-top: 0.4rem solid #0492ffe1;
           border-left: 0.3rem solid rgba(255, 68, 0, 0.987);
           border-right: 0.3rem solid rgba(255, 68, 0, 0.987);
