--- a/index.html
+++ b/index.html
@@ -2912,7 +2912,7 @@ transition: 0.18s ease-in;
 
               <div class="T1">
                 <div class="BoderTopColor1" style="opacity: 0.97; border: 0.1px solid rgba(190, 192, 201, 0.625); color: #181818c2;
-                background: #fff; padding: 6px; font-family: 'helvetica'; font-size: 18px">How To Teach The Alphabet In A Classroom With Children? [Burkina Faso]</div>
+                background: #fff; padding: 6px; font-family: 'helvetica'; font-size: 18px">How To Teach The Alphabet In A Classroom With Kids? [Burkina Faso]</div>
                 <div><img src="https://www.zupimages.net/up/22/21/3bad.jpg" alt="Classes"> </div>
               </div>
 
