--- a/index.html
+++ b/index.html
@@ -2705,7 +2705,7 @@ transition: 0.18s ease-in;
               <div class="ViiDe">
 
                 <h1 style="font-size: 2rem; text-align: left; color: #0290fdea;">What it means to live with a disability ?</h1>
-            <p>Living as a disabled person is very tough and perpetually challenging. Over to socially experience few consideration and a lot of discriminations, living with a disabilty is like to learning and also teaching gathered various chapters of life about disability in some ways. 
+            <p>Living as a disabled person is very tough and perpetually challenging. Over to socially experience few consideration and a lot of discriminations, living with a disabilty is like to learning and teaching gathered various chapters of life about disability in some ways. 
               <br> 
               <br>
               In terms of how disabled people are courageous and determinated to make their lives despite disability and stigmatisation, is very inspiring, energy-fueling, hope-making and may be game-changing for some people in the communities for some reasons. 
@@ -2918,7 +2918,7 @@ transition: 0.18s ease-in;
 
               <div class="T2">
                 <div class="BoderTopColor1" style="opacity: 0.97; border: 0.14px solid rgba(190, 192, 201, 0.625); color: #181818c2;
-                background: #fff; padding: 6px; font-family: 'helvetica'; font-size: 18px">Teaching Children Has Been Funny To Me. I Learned Back From Them</div>
+                background: #fff; padding: 6px; font-family: 'helvetica'; font-size: 18px">Teaching Kids Has Been Funny To Me. I Learned Back From Them</div>
                 <div><img src="https://www.zupimages.net/up/22/31/ttk3.jpg" alt="Teaching in BF"></div>
               </div>
 
