--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
       justify-items: center;
       width: 100%;
       height: 1550px;
-      background: rgba(106, 107, 115, 0.292);
+      background: #fff;
       color: rgba(109, 109, 109, 0.925);
       font-family: 'helvetica';
       font-weight: bold;
@@ -434,7 +434,7 @@
         flex-direction: column;
         width: 100%;
         height: auto;
-        background: rgba(106, 107, 115, 0.292);
+        background: #fff;
     }
   
     .content1{
