--- a/index.html
+++ b/index.html
@@ -2906,19 +2906,19 @@ transition: 0.18s ease-in;
               <div class="DiapoPhoto">
                 <div class="T">
                 <div class="BoderTopColor1" style="opacity: 0.97; border: 0.1px solid rgba(190, 192, 201, 0.625); color: #181818c2;
-                background: #fff; padding: 6px; font-family: 'helvetica'; font-size: 18px">Celebrating Christmas at Tiki N'Yiki's Headquarter in Ziniare [Burkina Faso]</div>
+                background: #fff; padding: 6px; font-family: 'helvetica'; font-size: 16px">Celebrating Christmas at Tiki N'Yiki's Headquarter in Ziniare [Burkina Faso]</div>
                 <div><img src="https://www.zupimages.net/up/22/31/z42x.jpg" alt="Christmas at Tiki N'Yiki"></div>
               </div>
 
               <div class="T1">
                 <div class="BoderTopColor1" style="opacity: 0.97; border: 0.1px solid rgba(190, 192, 201, 0.625); color: #181818c2;
-                background: #fff; padding: 6px; font-family: 'helvetica'; font-size: 18px">How To Teach The Alphabet In A Classroom With Kids? [Burkina Faso]</div>
+                background: #fff; padding: 6px; font-family: 'helvetica'; font-size: 16px">How To Teach The Alphabet to Kids In A Classroom ? [Burkina Faso]</div>
                 <div><img src="https://www.zupimages.net/up/22/21/3bad.jpg" alt="Classes"> </div>
               </div>
 
               <div class="T2">
                 <div class="BoderTopColor1" style="opacity: 0.97; border: 0.14px solid rgba(190, 192, 201, 0.625); color: #181818c2;
-                background: #fff; padding: 6px; font-family: 'helvetica'; font-size: 18px">Teaching Kids Has Been Funny To Me. I Learned Back From Them</div>
+                background: #fff; padding: 6px; font-family: 'helvetica'; font-size: 16px">Teaching Kids Has Been Funny To Me. I Learned Back From Them</div>
                 <div><img src="https://www.zupimages.net/up/22/31/ttk3.jpg" alt="Teaching in BF"></div>
               </div>
 
